CMS7-8770: Fix vertical alignment of breadcrumbs in Chrome - .hippo-dialog-bottom-left needs to be height: 100% - height of .hippo-breadcrumbs was already 100% - renamed _breadcrumb.less to _breadcrumbs.less

--- a/cms/api/src/main/styling/less/_breadcrumbs.less
+++ b/cms/api/src/main/styling/less/_breadcrumbs.less
@@ -63,6 +63,5 @@
 .hippo-dialog-bottom-left {
   .hippo-breadcrumbs {
     padding-left: 16px;
-    height: 100%;
   }
 }
