--- a/cms/api/src/main/styling/less/_modal.less
+++ b/cms/api/src/main/styling/less/_modal.less
@@ -158,6 +158,7 @@
   .hippo-dialog-bottom-left {
     overflow: hidden;
     padding-right: 8px;
+    height: 100%;
   }
 
   .hippo-dialog-bottom-right {
